--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ hr {
 /* event times */
 
 #times {
-    background-image: url('../images/times-background.webp');
+    background-image: url('../images/dublin-city.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -247,4 +247,38 @@ footer {
 
 #photos > img {
 width: 100%;
+}
+
+/* Media Queries */
+
+/* for larger to medium screen size from 1200px wide and down */
+
+@media screen and (max-width: 1200px) {
+    #club-ethos {
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    #welcome {
+        padding: 30px 0;
+        margin: 0;
+    }
+
+    #left-about, #right-about {
+        width: 100%;
+        float: left;
+        padding: 0
+    }
+
+    #center-about {
+        clear: both;
+        width: 100%;
+        float: left;
+        padding 0;
+    }
+    
+    hr {
+        display: none;
+    }
 }
