--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,7 +268,7 @@ width: 100%;
     #left-about, #right-about {
         width: 100%;
         float: left;
-        padding: 0
+        padding: 0;
     }
 
     #center-about {
@@ -280,5 +280,42 @@ width: 100%;
     
     hr {
         display: none;
+    }
+}
+
+/* for medium screen sizes from 950px wide and down */
+
+@media screen and (max-width: 950px) {
+    
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+
+    #cover-text {
+        left: 0;
+    }
+    
+    #club-ethos {
+        width: 90%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    .left-about-heading, .right-about-heading {
+        width: inherit;
+    }
+
+    .left-about-heading h2, .right-about-heading h2 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .left-about-heading p, .right-about-heading p {
+        text-align: center;
+        padding: 0 20px;
     }
 }
