--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,7 +275,14 @@ width: 100%;
         clear: both;
         width: 100%;
         float: left;
-        padding 0;
+        padding: 0;
+    }
+
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
     }
     
     hr {
