--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,4 +325,15 @@ width: 100%;
         text-align: center;
         padding: 0 20px;
     }
+
+    #photos {
+        column-count: 3;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
+    
 }
