Finish signup challenege, add code to signup.html, update code in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Oswald|Lato:300');
 
-* {
-    margin: 0;
-    padding: 0;
-    border: none;
+*{
+    margin:0;
+    padding:0;
+    border:0;
 }
 
-body {
+body{
     font-family: Lato, sans-serif;
-    font-weight: 300;
     color: #3a3a3a;
 }
 
 /* headings and logo */
 
-h1, h2 {
+h1, h2{
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
     color: #252525;
 }
 
-#logo {
+#logo{
     float: left;
     font-size: 280%;
     margin-left: 30px;
@@ -29,12 +28,12 @@ h1, h2 {
 
 /* navigation links */
 
-#menu {
+#menu{
     font-size: 110%;
     letter-spacing: 4px;
 }
 
-#menu, #logo {
+#logo, #menu{
     line-height: 75px;
 }
 
@@ -49,40 +48,35 @@ h1, h2 {
     color: inherit;
 }
 
-#menu a:hover {
+#menu a:hover{
     border-bottom: 1px solid #3a3a3a;
 }
 
-.active {
+.active{
     border-bottom: 1px solid #3a3a3a;
 }
 
-/* hero image and cover text */
+/* Hero image and cover text */
 
-#hero-outer {
-    height: 600px;
+#hero-outer{
+    height:600px;
     width: 100%;
     overflow: hidden;
-
     position: relative;
 }
 
-#cover-text, #cover-text h2 {
-    color: #fff;
-}
-
-#hero-image {
-    height: 600px;
+#hero-image{
+    height:600px;
     width: 100%;
-    background: url('../images/hero-image.webp') no-repeat center center;
+    background: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/main-image.png") no-repeat center center;
 
-    /* animates zoom effect on loading page */
+    /* Animates zoom effect on loading the page */
     animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
 
-/* creates the level of zoom for hero image */
+/* Creates the level of zoom for hero image */
 @keyframes hero-zoom {
     from{
         transform: scale(1);
@@ -92,9 +86,13 @@ h1, h2 {
     }
 }
 
+#cover-text, #cover-text h2 {
+    color: #ffffff;
+}
+
 #cover-text {
     font-size: 130%;
-    font-family: Oswald, sans-serif;
+    font-family: Oswald;
     text-transform: uppercase;
     letter-spacing: 4px;
 
@@ -110,15 +108,16 @@ h1, h2 {
     right: 150px;
 
     position: absolute;
+
 }
 
-/* club ethos */
+/* Club ethos */
 
-#club-ethos {
+#club-ethos{
     height: 600px;
 }
 
-#left-about {
+#left-about{
     padding-top: 30px;
     width: 33%;
     float: left;
@@ -157,17 +156,19 @@ hr {
     margin-bottom: 50px;
 }
 
-.right-about-heading h2 {
-    text-align: right;
-}
-
 .right-about-heading p {
     text-align: right;
 }
 
+.right-about-heading h2 {
+    text-align: right;
+}
+
+/* Club ethos center image */
+
 #welcome {
-    text-align: center;
     margin: 20px 0;
+    text-align: center;
     font-size: 280%;
 }
 
@@ -176,22 +177,22 @@ hr {
     height: 300px;
     padding: 30px;
     border-style: solid;
-    border-color: #ccc;
+    border-color: #cccccc;
     border-width: 1px;
     border-radius: 50%;
     margin: 0 auto;
 }
 
 #circle-cover-bg {
-    background: url('../images/ethos-center-image.jpg') no-repeat center center;
+    background: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/video-mask.png") no-repeat center center;
     height: 100%;
     border-radius: 50%;
 }
 
-/* event times */
+/* Event times */
 
-#times {
-    background-image: url('../images/dublin-city.webp');
+#times{
+    background-image: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/dublin-city.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -201,7 +202,7 @@ hr {
 
 #times div {
     color: #fafafa;
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba(0,0,0, .6);
     width: 20%;
     height: 300px;
     float: left;
@@ -215,46 +216,101 @@ hr {
     color: #fafafa;
 }
 
-/* footer */
+/* Footer */
 
-footer {
+footer{
     height: 150px;
 }
 
-.social-networks {
+.social-networks{
     text-align: center;
+
 }
 
-.social-networks > li {
+.social-networks li{
     display: inline;
 }
 
-.social-networks i {
+.social-networks i{
     font-size: 160%;
     margin: 1%;
     padding: 5%;
     color: #3a3a3a;
 }
 
-/* gallery */
+/* Gallery Photos */
 
-#photos {
+#photo {
     clear: both;
     line-height: 0;
     column-count: 4;
-    column-gap: 0;
+    column-gap: 0px;
 }
 
-#photos > img {
-width: 100%;
+#photo img{
+    width: 100%;
 }
 
-/* Media Queries */
+/* Form */
 
-/* for larger to medium screen size from 1200px wide and down */
+.form-section {
+    clear: left;
+    background: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/formbg.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 900px;
+}
 
-@media screen and (max-width: 1200px) {
-    #club-ethos {
+.signup-form {
+    margin: 150px 10% 0 0;
+    color: #fff;
+    background-color: rgba(60, 60, 60, 0.6);
+    max-width: 400px;
+    position: absolute;
+    left: 10%;
+    padding: 30px;
+}
+
+.signup-form > h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+}
+
+.text-input:hover {
+    border-color: #f16c6b;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px 15px 32px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #f16c6b;
+    color: #fafafa;
+    display: block;
+}
+
+.join-button:hover {
+    background-color: #fafafa;
+    color: #f16c6b;
+}
+
+/* Media queries */
+
+/* For large to medium screens sizes from 1200px wide and down */
+@media screen and (max-width: 1200px){
+    #club-ethos{
         width: 65%;
         height: 1200px;
         margin: 0 auto;
@@ -262,78 +318,78 @@ width: 100%;
 
     #welcome {
         padding: 30px 0;
-        margin: 0;
+        margin-top: 0;
     }
 
     #left-about, #right-about {
-        width: 100%;
-        float: left;
+        width:100%;
+        float:left;
         padding: 0;
     }
 
-    #center-about {
+    #center-about{
         clear: both;
         width: 100%;
         float: left;
         padding: 0;
     }
 
-    #times > div {
+    #times div {
         width: 100%;
         clear: both;
         height: 150px;
         padding: 0;
     }
-    
+
     hr {
         display: none;
     }
 }
 
-/* for medium screen sizes from 950px wide and down */
+/* For medium screens sizes from 950px wide and down */
+@media screen and (max-width: 950px){
 
-@media screen and (max-width: 950px) {
-    
-    #menu {
+    #menu{
         clear: left;
         float: left;
-        margin-left: 30px;
+        margin-left: 30px; 
         margin-bottom: 20px;
         line-height: 25px;
     }
 
-    #cover-text {
-        left: 0;
+    #cover-text{
+        left:0px;
     }
-    
-    #club-ethos {
-        width: 90%;
+
+    #club-ethos{
+        width:90%;
         height: 1200px;
         margin: 0 auto;
     }
 
-    .left-about-heading, .right-about-heading {
+    .left-about-heading, .right-about-heading{
         width: inherit;
     }
 
-    .left-about-heading h2, .right-about-heading h2 {
+    .left-about-heading h2, .right-about-heading h2{
         width: 100%;
         text-align: center;
     }
 
-    .left-about-heading p, .right-about-heading p {
+    .left-about-heading p, .right-about-heading p{
         text-align: center;
-        padding: 0 20px;
+        padding: 0 20px 0 20px;
     }
 
-    #photos {
+    #photo{
         column-count: 3;
     }
 }
 
-@media screen and (max-width: 800px) {
-    #photos {
+/* For small screens sizes from 800px wide and down */
+@media screen and (max-width: 800px){
+    #photo{
         column-count: 2;
     }
-    
 }
+
